--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <!-- Awal Navbar -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent shadow-lg fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-lg fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">Mauza Berkah Sejahtera</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -59,9 +59,9 @@
 <div class="container-fluid banner">
   <div class="container text-center">
     <h4 class="display-6">Selamat Datang</h4>
-    <h3 class="display1">Mauza Berkah Sejahtera</h3>
+    <h3 class="display-1">Mauza Berkah Sejahtera</h3>
     <a href="#layanan"></a>
-    <button type="button" class="btn-primary btn-lg"> Layanan Kami </button>
+    <button type="button" class="btn-primary btn-lg">Layanan Kami</button>
   </div>
 </div>
 
@@ -194,8 +194,8 @@
       </div>
       <div class="col-md-4 text-center tim">
         <img src="tim/4.jpg" class="rounded-circle mb-3" />
-        <h4>SITI NURHAYATI</h4>
-        <p></p>
+        <h4>YANTI</h4>
+        <p>Sales Marketing</p>
         <p>
           <a href="" class="social"><i class="fab fa-whatsapp"></i></a>
           <a href="" class="social"><i class="fab fa-instagram"></i></a>
@@ -205,7 +205,7 @@
       <div class="col-md-4 text-center tim">
         <img src="tim/3.jpg" class="rounded-circle mb-3" />
         <h4>DEVI</h4>
-        <p></p>
+        <p>Sales Marketing</p>
         <p>
           <a href="" class="social"><i class="fab fa-whatsapp"></i></a>
           <a href="" class="social"><i class="fab fa-instagram"></i></a>
@@ -252,6 +252,15 @@
       </div>
       <div class="col">
         <img src="client/7.png"/>
+      </div>
+      <div class="col">
+        <img src="client/8.png"/>
+      </div>
+      <div class="col">
+        <img src="client/9.png"/>
+      </div>
+      <div class="col">
+        <img src="client/10.png"/>
       </div>
     </div>
   </div>
